# bsio

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: BroadCastClient.cpp  BroadCastServer.cpp  CMakeLists.txt  EchoClient.cpp  EchoServer.cpp  HttpClient.cpp  HttpServer.cpp  SingleThreadEchoClient.cpp  SingleThreadEchoServer.cpp
include/bsio/: Bsio.hpp  Functor.hpp  IoContextThread.hpp  IoContextThreadPool.hpp  SendableMsg.hpp  SharedSocket.hpp  TcpAcceptor.hpp  TcpConnector.hpp  TcpSession.hpp  Version.hpp  WrapperIoContext.hpp  bsio.h
include/bsio/base/: Packet.hpp  WaitGroup.hpp
include/bsio/base/crypto/: Base64.hpp
include/bsio/base/endian/: Endian.hpp
include/bsio/http/: HttpFormat.hpp  HttpParser.hpp  HttpService.hpp  WebSocketFormat.hpp
include/bsio/net/: FixedIoContextProvider.hpp  Functor.hpp  IoContextProvider.hpp  IoContextThread.hpp  IoContextThreadPool.hpp  SendableMsg.hpp  SharedSocket.hpp  TcpAcceptor.hpp  TcpConnector.hpp  TcpSession.hpp  WrapperIoContext.hpp
include/bsio/net/http/: HttpFormat.hpp  HttpParser.hpp  HttpService.hpp  WebSocketFormat.hpp  http_parser.h
include/bsio/net/wrapper/: AcceptorBuilder.hpp  ConnectorBuilder.hpp  HttpAcceptorBuilder.hpp  HttpConnectorBuilder.hpp
include/bsio/net/wrapper/internal/: HttpSessionBuilder.hpp  Option.hpp  TcpSessionBuilder.hpp
include/bsio/wrapper/: AcceptorBuilder.hpp  ConnectorBuilder.hpp  HttpAcceptorBuilder.hpp  HttpConnectorBuilder.hpp  TcpSessionBuilder.hpp
include/bsio/wrapper/internal/: AcceptorBuilder.hpp  Common.hpp  ConnectorBuilder.hpp  HttpSessionBuilder.hpp  Option.hpp  SessionBuilder.hpp  TcpSessionBuilder.hpp
