add_executable(echo_client EchoClient.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(echo_client pthread)
endif()

add_executable(echo_server EchoServer.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(echo_server pthread)
endif()

add_executable(http_client HttpClient.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(http_client pthread)
endif()

add_executable(http_server HttpServer.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(http_server pthread)
endif()
